Added expression handling capabilities for specifying the reaction rates.